Changes in quota-tools from 3.13 to 3.14
* implemented nicer message formatting for warnquota(8) (Jan Kara)
* quota(1) has -w option to supress line wrapping for long device names (Jan Kara)
* quota(1) prints grace time even if hard limit is reached (Jan Kara)

Changes in quota-tools from 3.12 to 3.13
* fixed mistakes in several error messages, improved error reporting functions
  (Dmitry V. Levin)
* volume label and UUID support for reiserfs (Jan Kara)
* support for LABEL= and UUID= on a command line (Jan Kara)
* parse NFSD export table to find pseudofilesystem root for NFSv4 (Jan Kara)
* handle better when quota file should become empty (Niu YaWei)
* minor manpage and help-text fixes (Jan Kara)
* fixed quotacheck(8) to check each block only once (Jan Kara)
* fixed quotacheck(8) messages about corrupted blocks (Jan Kara)
* fixed quotacheck(8) to rename quota files after turning quotas off (Jan Kara)
* added sanity check to quota reporting (Jan Kara)
* fixed check for illegal references in quotacheck(8) (Jan Kara)
* added NFSv4 to the list of supported fs types (Jan Kara)
* updating of progress is now less frequent - should speedup quotacheck -v a bit (Jan Kara)
* added printing of directories to quotacheck(8) (Jan Kara, Jan Engelhardt)
* added dynamic mountpoint array allocation (Jan Kara)
* made quotacheck(8) more friendly to journaled quota (Jan Kara)
* changed configure to detect whether nls is needed (Tomasz Kloczko, Jan Kara)
* added JFS into a set of supported filesystems (David Kleikamp)
* added French translation (Jerome Schell)
* fixed quota tools to set of grace time only after exceeding soft limit, not
  at reaching (Jan Kara)
* fixed exit codes of setquota(8) and edquota(8) (Jan Kara)
* updated Polish translations (Jakub Bogusz)
* fixed "bashism" is Makefile (Michael Meskes)

Changes in quota-tools from 3.11 to 3.12
* fixed bug in quotaon(8) reporting (Paul Szabo)
* added manpages for xqmstats & quotastats (Max Vozeler)